Week 5: OOM and GC